java.editor.overridden package cleanup
 - jdk 17 code improvements and cleanup
 - deprecation fixes